# ssconverter

./: MANIFEST.in  README.md  build.parameters  setup.cfg  setup.py  ssconverter.spec
src/ssconverter/: ooutils.py
