[metadata]
name = ssconverter
version = 0.1.3
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = A program to convert to CSV specific sheets of an OpenOffice / LibreOffice spreadsheet
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPLv2.1+
url = https://github.com/Rudd-O/ssconverter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
keywords = office libreoffice openoffice

[options]
# cannot be here, or else RPM spec fucks up
# because there is no python3dist(uno) provider
# install_requires =
#     uno
package_dir =
    = src
packages = find:
scripts =
  bin/ssconverter

[options.packages.find]
where = src
